--- a/css/_productive.scss
+++ b/css/_productive.scss
@@ -31,7 +31,7 @@
         }
 
         a {
-            background: url(/images/icon-arrow.svg) no-repeat;
+            background: url(.././images/icon-arrow.svg) no-repeat;
             background-position: right center;
             padding-right: 25px;
             text-decoration: underline;
