--- a/css/_hero.scss
+++ b/css/_hero.scss
@@ -9,14 +9,14 @@
         height: 40vw;
         position: absolute;
         bottom: 0;
-        background-image: url(/images/bg-curvy-mobile.svg);
+        background-image: url(.././images/bg-curvy-mobile.svg);
         background-size: cover;
         background-repeat: no-repeat;
         background-position: bottom center;
         z-index: 0;
 
         @include breakpoint(medium) {
-            background-image: url(/images/bg-curvy-desktop.svg);
+            background-image: url(.././images/bg-curvy-desktop.svg);
             height: 33vw;
         }
     }
