--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@ button, .button, button--small, .button--small, button--large, .button--large {
   width: 100%;
   cursor: pointer;
   text-align: center;
+  font-family: "Open Sans", sans-serif;
 }
 
 @media screen and (min-width: 899px) {
